--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -74,7 +74,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="30dp"
-                android:background="@drawable/di_off"></LinearLayout>
+                android:background="@drawable/di_off"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
